npm package name snitch was taken

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snitch",
+  "name": "node-snitch",
   "repository": "https://github.com/michielbdejong/snitch",
   "version": "0.0.0",
   "dependencies": {
